# traceval

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: demo.tape  extending.md  formats.md  targets.md
examples/: demo.sh  make_traces.py  synthetic_traces.jsonl
examples/demo_agent/: agent.py  core.py
scripts/: readme-outputs.sh
src/traceval/: cli.py  console.py  model.py  store.py
src/traceval/analyze/: __init__.py  cluster.py  coverage.py  outcomes.py  report.py
src/traceval/compile/: __init__.py  cases.py  emit_pytest.py  emit_yaml.py  rubrics.py
src/traceval/compile/templates/: conftest.py.jinja  test_generated.py.jinja
src/traceval/demo/: __init__.py  agent.py  traces.py
src/traceval/ingest/: __init__.py  base.py  generic.py  langfuse.py  langsmith.py  otel.py
src/traceval/run/: calibrate.py  judge.py  runner.py  scorers.py  target.py
tests/: test_broken_target.py  test_calibrate.py  test_cli.py  test_console_output.py  test_e2e_demo.py  test_json_output.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_regression_cases.py  test_serve.py
tests/fixtures/: README.md  generic_traces.jsonl  langfuse_export.jsonl  langfuse_observe_export.jsonl  langsmith_runs.jsonl  otel_spans.jsonl
tests/fixtures/demo_agent_expected/: results.json
