[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traceval"
version = "0.2.4"
description = "Compile production LLM-agent traces (OTel, Langfuse, LangSmith) into runnable pytest eval suites with regression detection and judge calibration."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ram", email = "rkm1415@gmail.com" }]
keywords = [
    "llm",
    "evals",
    "evaluation",
    "agents",
    "tracing",
    "opentelemetry",
    "langfuse",
    "langsmith",
    "testing",
    "llm-as-a-judge",
    "regression-testing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "httpx>=0.24.0",
    "jsonschema>=4.17.0",
    "pyyaml>=6.0.0",
    # `traceval run` executes the generated suite via pytest; it is a
    # first-class command, not a dev-only concern.
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/theramkm/traceval"
Repository = "https://github.com/theramkm/traceval"
Documentation = "https://github.com/theramkm/traceval/tree/main/docs"
Changelog = "https://github.com/theramkm/traceval/blob/main/CHANGELOG.md"
Issues = "https://github.com/theramkm/traceval/issues"

[project.scripts]
traceval = "traceval.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/traceval"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "RUF"]
ignore = ["N802"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "traceval.model.*",
    "traceval.run.*",
    "traceval.compile.*"
]
strict = true

[[tool.mypy.overrides]]
module = [
    "yaml.*",
    "pytest.*",
    "jsonschema.*"
]
ignore_missing_imports = true


[dependency-groups]
dev = [
    "pytest-cov>=4.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "readme-renderer[md]>=44.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--tb=short"

[tool.coverage.run]
omit = [
    "src/traceval/compile/templates/*",
]

